# alphavibe

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
alphavibe/: __init__.py  backtest_engine.py  cli.py  config.py  fetcher.py  logger.py  metrics.py  schema.py  storage.py
tests/: test_cli.py  test_main.py  test_metrics.py
