[project]
name = "alphavibe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
  "ccxt>=4.0.0",
  "pandas>=2.2",
  "backtesting>=0.3.3",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pre-commit>=3.7",
  "ruff>=0.4",
]

[tool.uv]
environments = [
  "sys_platform == 'linux'  and platform_machine == 'x86_64'",
  "sys_platform == 'darwin' and platform_machine == 'arm64'",
]
cache-dir      = "./.uv_cache"
default-groups = ["dev"]

[tool.ruff]
target-version = "py312"
line-length = 88

[[tool.uv.index]]
name     = "pytorch"
url      = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
